--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.7.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@walletconnect/react-native-compat": "^2.4.7",
+    "@walletconnect/universal-provider": "^2.4.7",
+    "ethers": "5.6.9",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
